--- a/GEANT4/Training First Project/CMakeLists.txt
+++ b/GEANT4/Training First Project/CMakeLists.txt
@@ -10,12 +10,19 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 
-file(GLOB MACRO_FILES"*.mac")  //---------------->we add this later when we created the visuilization macro file 
+file(GLOB MACRO_FILES"*.mac")
 
-file(COPY ${MACRO_FILES} DESTINATION ${PROJECT_BINARY_DIR})  //-------------->this too
+file(COPY ${MACRO_FILES} DESTINATION ${PROJECT_BINARY_DIR})
+
+file(GLOB DATA_FILES"*.dat")
+
+file(COPY ${DATA_FILES} DESTINATION ${PROJECT_BINARY_DIR})
+
 
 add_executable(sim ${sources})
 target_link_libraries(sim ${Geant4_LIBRARIES})
 
 add_custom_target(Simulation DEPENDS sim)
+
+
 
